apps/homarr/deployment-homarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homarr
  name: homarr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: homarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - image: ghcr.io/homarr-labs/homarr:v2.4.0
          name: homarr
          resources: {}
          ports:
            - containerPort: 7575
              protocol: TCP
          volumeMounts:
            - mountPath: /appdata
              name: homarr
            - mountPath: /app/data/icons
              name: library
              subPath: "arr/homarr/icons"
            - mountPath: /data
              name: library
              subPath: "arr/homarr/data"
      restartPolicy: Always
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
        - name: homarr
          persistentVolumeClaim:
            claimName: homarr-new
