apps/homarr/service-homarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homarr
  name: homarr
spec:
  ports:
    - name: "7575"
      port: 7575
      targetPort: 7575
  selector:
    app: homarr
