apps/homarr/ingress-homarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  namespace: plex
spec:
  ingressClassName: nginx
  rules:
  - host: homarr.home.lab
    http:
      paths:
      - backend:
          service:
            name: homarr
            port:
              number: 7575
        path: /
